Using a specified source_version and changed promote to release.

--- a/concourse/pipelines/artifact-releaser-autopush.yaml
+++ b/concourse/pipelines/artifact-releaser-autopush.yaml
@@ -136,23 +136,23 @@ jobs:
   - in_parallel:
     steps:
     - file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
-      task: promote-debian-10
+      task: publish-debian-10
       vars:
         topic: "projects/artifact-releaser-autopush/topics/gcp-guest-image-release-autopush"
         image_name: "debian_10"
         gcs_image_path: "gs://artifact-releaser-autopush-rtp/debian"
         wf: "debian/debian_10.publish.json"
         publish_version: ((.:version))
-        source_version: ((.version))
+        source_version: "v20211027"
     - file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
-      task: promote-almalinux-8
+      task: publish-almalinux-8
       vars:
         topic: "projects/artifact-releaser-autopush/topics/gcp-guest-image-release-autopush"
         image_name: "almalinux_8"
         gcs_image_path: "gs://artifact-releaser-autopush-rtp/almalinux"
         wf: "enterprise_linux/almalinux_8.publish.json"
         publish_version: ((.:version))
-        source_version: ((.version))
+        source_version: "v20211027"
 resources:
 - name: guest-test-infra
   source:
