--- a/concourse/tasks/gcloud-get-secret.yaml
+++ b/concourse/tasks/gcloud-get-secret.yaml
@@ -7,6 +7,10 @@ image_resource:
     repository: google/cloud-sdk
     tag: alpine
 
+params:
+  secret-version: "latest"
+  secret-name:
+
 inputs:
 - name: credentials
 
