Updating params names and param/var syntax

--- a/concourse/tasks/gcloud-get-secret.yaml
+++ b/concourse/tasks/gcloud-get-secret.yaml
@@ -8,8 +8,8 @@ image_resource:
     tag: alpine
 
 params:
-  secret-version: "latest"
-  secret-name:
+  SECRET_VERSION: "latest"
+  SECRET_NAME:
 
 inputs:
 - name: credentials
@@ -27,4 +27,4 @@ run:
   - -exc
   - |
     gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
-    gcloud secrets versions access ((secret-version)) --secret=((secret-name)) --project=$PROJECT > gcp-secret-manager/((secret-name))
+    gcloud secrets versions access $SECRET_VERSION --secret=$SECRET_NAME --project=$PROJECT > gcp-secret-manager/$SECRET_NAME
