--- a/concourse/pipelines/windows-image-build.yaml
+++ b/concourse/pipelines/windows-image-build.yaml
@@ -163,32 +163,32 @@ jobs:
     file: guest-test-infra/concourse/tasks/get-credential.yaml
   - task: get-secret-iso
     file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
-    vars:
-      secret-name: "winserver-20h2-64"
+    params:
+      SECRET_NAME: "winserver-20h2-64"
   - load_var: windows-iso
     file: gcp-secret-manager/winserver-20h2-64
   - task: get-secret-dotnet48
     file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
-    vars:
-      secret-name: "windows_gcs_updates_sac20h2"
+    params:
+      SECRET_NAME: "windows_gcs_updates_sac20h2"
   - load_var: windows-updates
     file: gcp-secret-manager/windows_gcs_updates_sac20h2
   - task: get-secret-pwsh
     file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
-    vars:
-      secret-name: "windows_gcs_pwsh"
+    params:
+      SECRET_NAME: "windows_gcs_pwsh"
   - load_var: windows-gcs-pwsh
     file: gcp-secret-manager/windows_gcs_pwsh
   - task: get-secret-cloud-sdk
     file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
-    vars:
-      secret-name: "windows_gcs_cloud_sdk"
+    params:
+      SECRET_NAME: "windows_gcs_cloud_sdk"
   - load_var: windows-cloud-sdk
     file: gcp-secret-manager/windows_gcs_cloud_sdk
   - task: get-secret-dotnet48
     file: guest-test-infra/concourse/tasks/gcloud-get-secret.yaml
-    vars:
-      secret-name: "windows_gcs_dotnet48"
+    params:
+      SECRET_NAME: "windows_gcs_dotnet48"
   - load_var: windows-gcs-dotnet48
     file: gcp-secret-manager/windows_gcs_dotnet48
   - task: daisy-build-windows-20h2-core
