SECRET_NAME to secret_name

--- a/concourse/tasks/gcloud-get-secret.yaml
+++ b/concourse/tasks/gcloud-get-secret.yaml
@@ -17,8 +17,6 @@ params:
   GOOGLE_APPLICATION_CREDENTIALS: "credentials/credentials.json"
   PROJECT: "gcp-guest"
   SECRET_VERSION: "latest"
-  SECRET_NAME:
-
 
 run:
   path: sh
@@ -26,4 +24,4 @@ run:
   - -exc
   - |
     gcloud auth activate-service-account --key-file=$GOOGLE_APPLICATION_CREDENTIALS
-    gcloud secrets versions access $SECRET_VERSION --secret=$SECRET_NAME --project=$PROJECT > gcp-secret-manager/$SECRET_NAME
+    gcloud secrets versions access $SECRET_VERSION --secret=((secret_name)) --project=$PROJECT > gcp-secret-manager/((secret_name))
