--- a/concourse/pipelines/debian-worker-image-build.yaml
+++ b/concourse/pipelines/debian-worker-image-build.yaml
@@ -187,13 +187,15 @@ jobs:
   - load_var: publish-version
     file: publish-version/version # produced from generate-version task
   - task: publish-debian-10-worker
-    file: guest-test-infra/concourse/tasks/daisy-publish-images.yaml
+    file: guest-test-infra/concourse/tasks/gcloud-publish-image.yaml
     vars:
       source_gcs_path: "gs://artifact-releaser-prod-rtp/debian-worker"
       source_version: v((.:source-version))
       publish_version: ((.:publish-version))
       wf: "debian/debian_10_worker.publish.json"
-      environment: "prod"
+      release_notes: ""
+      image_name: "debian_10_worker"
+      topic: "projects/artifact-releaser-prod/topics/gcp-guest-image-release-prod"
   on_success:
     task: success
     file: guest-test-infra/concourse/tasks/publish-job-result.yaml
